have a nice day!

--- a/indexes/nsc1025/182.md
+++ b/indexes/nsc1025/182.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】真理与传统](../../pages/nsc1025/n13713205.md) 
+#### [钟原：党媒胡乱为“清零”找借口所泄漏的真相](../../pages/nsc1025/n13712917.md) 
+#### [王赫：美国对华贸易政策或有重大调整](../../pages/nsc1025/n13712836.md) 
 #### [同根：中央高官保命，各地封锁清零](../../pages/nsc1025/n13712791.md) 
 #### [【一线采访】上海百余安保露宿街头无人管](../../pages/nsc1025/n13712704.md) 
 #### [周晓辉：上海逾二十家医院医护对外求助](../../pages/nsc1025/n13712683.md) 
@@ -27,9 +30,6 @@
 #### [田云：中共上海封城引强烈质疑 噩梦何时休](../../pages/nsc1025/n13710248.md) 
 #### [钟原：中共国务院忽发通知诟病极端防疫措施](../../pages/nsc1025/n13710177.md) 
 #### [【名家专栏】中共修改审计法规 避中概股退市](../../pages/nsc1025/n13709949.md) 
-#### [周晓辉：名人与爱共大V们也逃不过铁拳暴击](../../pages/nsc1025/n13710112.md) 
-#### [颜丹：“GDP第一”的上海在闹大饥荒](../../pages/nsc1025/n13710106.md) 
-#### [岳山：李强在上海焦头烂额 韩正暗喜？](../../pages/nsc1025/n13710063.md) 
 
 ---
-#### 第 [ [181](./181.md) / [180](./180.md) / [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) ] 页
+#### 第 [ [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) ] 页
