--- a/indexes/nsc422/5.md
+++ b/indexes/nsc422/5.md
@@ -1,5 +1,6 @@
 ### 纪元评论：纪元社论
 ---
+#### [《九评共产党》全书目录](../../pages/nsc422/n13708085.md) 
 #### [魔鬼在统治着我们的世界(28)：结束语](../../pages/nsc422/n10936246.md) 
 #### [魔鬼在统治着我们的世界(27)：全球野心(下)](../../pages/nsc422/n10928319.md) 
 #### [魔鬼在统治着我们的世界(26)：全球野心(上)](../../pages/nsc422/n10900318.md) 
@@ -29,7 +30,6 @@
 #### [魔鬼在统治着我们的世界(4)：欧洲发端](../../pages/nsc422/n10414890.md) 
 #### [魔鬼在统治着我们的世界(3)：毁人36计](../../pages/nsc422/n10411583.md) 
 #### [九评编辑部：魔鬼在统治着我们的世界(2)](../../pages/nsc422/n10410036.md) 
-#### [九评编辑部：魔鬼在统治着我们的世界(1)](../../pages/nsc422/n10406825.md) 
 
 ---
 #### 第 [ [5](./5.md) / [4](./4.md) / [3](./3.md) / [2](./2.md) / [1](./1.md) ] 页
