--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】这次上海封城，最值得国人思考是什么？](../../pages/nsc993/n13712983.md) 
+#### [袁斌：他们没有死于新冠，却因新冠而死](../../pages/nsc993/n13712971.md) 
 #### [美国是全球最大人权赤字国？央视被网民骂翻](../../pages/nsc993/n13712475.md) 
 #### [竞选者：什么是国家统一市场？](../../pages/nsc993/n13712470.md) 
 #### [上海市民：我受不了了人很难受，就看着我死吗？](../../pages/nsc993/n13712354.md) 
@@ -28,8 +30,6 @@
 #### [律师：上海单独隔离婴幼儿涉嫌滥用职权罪](../../pages/nsc993/n13694627.md) 
 #### [祝君安：浪淘沙·清零模式](../../pages/nsc993/n13694452.md) 
 #### [【网海拾贝】这样的上海百年不遇](../../pages/nsc993/n13692603.md) 
-#### [唐付民：再次质疑疯狂的中共抗疫模式](../../pages/nsc993/n13691971.md) 
-#### [同根：正视疫苗的无效，回归昔日的忠告（下）](../../pages/nsc993/n13688756.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
