--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：上海法官警官富商连环被杀之谜](../../pages/nsc1028/n13712763.md) 
 #### [王友群：中南海大秘王维工被判死缓之谜](../../pages/nsc1028/n13705201.md) 
 #### [林辉：中共洗脑老电影 主创人员遭迫害](../../pages/nsc1028/n13699437.md) 
 #### [王友群：江泽民孙子是如何“闷声发大财”的？](../../pages/nsc1028/n13693213.md) 
@@ -29,7 +30,6 @@
 #### [王友群：毛泽东授意打倒的“胡风分子”阿垅](../../pages/nsc1028/n13592541.md) 
 #### [李清：建国门枪击案背后鲜为人知的故事](../../pages/nsc1028/n13589079.md) 
 #### [中共罪行录之七十二：经济学家的饥饿记忆](../../pages/nsc1028/n13586930.md) 
-#### [【名家专栏】对卵子“捐赠”说不](../../pages/nsc1028/n13581506.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
