--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [长风拂泪：散文时评——太平年](../../pages/nsc1035/n13713601.md) 
 #### [章明之：科学无法证实神不存在](../../pages/nsc1035/n13712224.md) 
 #### [《抓捕2》：正反派警察对峙，一部绝不能错过的好电影](../../pages/nsc1035/n13711458.md) 
 #### [李宥萱：当短视频崛起，你，上瘾了吗？](../../pages/nsc1035/n13678127.md) 
@@ -29,7 +30,6 @@
 #### [清荷：谁种的苦果？](../../pages/nsc1035/n13470084.md) 
 #### [美国人在金门：通往自由前线的旅程](../../pages/nsc1035/n13453438.md) 
 #### [【名家专栏】圣诞心愿：权利与自由](../../pages/nsc1035/n13453241.md) 
-#### [赵阳：我行走在黑白两道的舅舅，和他错选的人生](../../pages/nsc1035/n13438837.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
