--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,11 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】全世界在解封，中国却越来越像露天监狱](../../pages/nsc993/n13713632.md) 
+#### [一个普通上海高中生的自白和发问](../../pages/nsc993/n13713613.md) 
+#### [观雨堂主：结束吧！“我爱你，中国”](../../pages/nsc993/n13713568.md) 
+#### [金浴凤：哀清零](../../pages/nsc993/n13713507.md) 
+#### [东方霞：观大陆疫情治理有感](../../pages/nsc993/n13713502.md) 
+#### [理悟：十悔逢红朝](../../pages/nsc993/n13713500.md) 
 #### [【网海拾贝】这次上海封城，最值得国人思考是什么？](../../pages/nsc993/n13712983.md) 
 #### [袁斌：他们没有死于新冠，却因新冠而死](../../pages/nsc993/n13712971.md) 
 #### [美国是全球最大人权赤字国？央视被网民骂翻](../../pages/nsc993/n13712475.md) 
@@ -24,12 +30,6 @@
 #### [理悟：命悬一线等什么](../../pages/nsc993/n13703131.md) 
 #### [【网海拾贝】如能抗议何须抗疫，若不废言怎有肺炎](../../pages/nsc993/n13701767.md) 
 #### [网友调侃中共防疫政策，令人捧腹](../../pages/nsc993/n13701561.md) 
-#### [【网海拾贝】“人们成了灾难性政治实验的一部分”](../../pages/nsc993/n13698988.md) 
-#### [我们从小到大学到的历史哪些是假的（17）](../../pages/nsc993/n13698883.md) 
-#### [【网海拾贝】所谓“全国疫情数据”都是中共编造的](../../pages/nsc993/n13694674.md) 
-#### [律师：上海单独隔离婴幼儿涉嫌滥用职权罪](../../pages/nsc993/n13694627.md) 
-#### [祝君安：浪淘沙·清零模式](../../pages/nsc993/n13694452.md) 
-#### [【网海拾贝】这样的上海百年不遇](../../pages/nsc993/n13692603.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
