--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】上海的国际形象已经分崩离析](../../pages/nsc993/n13714379.md) 
+#### [上海志愿者：这一次次的折腾究竟是什么道理？](../../pages/nsc993/n13714370.md) 
+#### [跳楼的小提琴家妻子质问：求医无门，为何？](../../pages/nsc993/n13713654.md) 
 #### [【网海拾贝】全世界在解封，中国却越来越像露天监狱](../../pages/nsc993/n13713632.md) 
 #### [一个普通上海高中生的自白和发问](../../pages/nsc993/n13713613.md) 
 #### [观雨堂主：结束吧！“我爱你，中国”](../../pages/nsc993/n13713568.md) 
@@ -27,9 +30,6 @@
 #### [一个上海市民的哭诉：“我的爸爸没了”](../../pages/nsc993/n13706497.md) 
 #### [谢燕益：受害人郭洪伟因公权渎职侵权致死](../../pages/nsc993/n13706184.md) 
 #### [【网海拾贝】你能想像得到这里是上海吗？](../../pages/nsc993/n13704442.md) 
-#### [理悟：命悬一线等什么](../../pages/nsc993/n13703131.md) 
-#### [【网海拾贝】如能抗议何须抗疫，若不废言怎有肺炎](../../pages/nsc993/n13701767.md) 
-#### [网友调侃中共防疫政策，令人捧腹](../../pages/nsc993/n13701561.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
