--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】孙春兰在上海视察搞屋顶摆拍，穿帮了](../../pages/nsc993/n13715212.md) 
 #### [恐怖，94岁转阴的上海老太太也要被拉去方舱](../../pages/nsc993/n13715170.md) 
 #### [侯镇安：香港政府滥用国安法余波未了](../../pages/nsc993/n13715143.md) 
 #### [静雅：疫情再袭中国时 如何才能守住平安？](../../pages/nsc993/n13713292.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】所谓不惜一切代价，就是不惜让你成为代价](../../pages/nsc993/n13708201.md) 
 #### [真真：什么是“中国特色”](../../pages/nsc993/n13708141.md) 
 #### [一个上海阳性市民72小时的荒谬人生](../../pages/nsc993/n13706620.md) 
-#### [【网海拾贝】一场针对十几亿人的服从性训练](../../pages/nsc993/n13706555.md) 
 
 ---
-#### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
+#### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
