--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13716733.md) 
+#### [吐为快：卜算子·什么是赵国的政治](../../pages/nsc993/n13716683.md) 
+#### [上海财大院长直指当前防疫存在十大问题](../../pages/nsc993/n13716670.md) 
+#### [【网海拾贝】病毒没清零，最基本的人权却被清零了](../../pages/nsc993/n13716295.md) 
 #### [【网海拾贝】孙春兰在上海视察搞屋顶摆拍，穿帮了](../../pages/nsc993/n13715212.md) 
 #### [恐怖，94岁转阴的上海老太太也要被拉去方舱](../../pages/nsc993/n13715170.md) 
 #### [侯镇安：香港政府滥用国安法余波未了](../../pages/nsc993/n13715143.md) 
@@ -26,10 +30,6 @@
 #### [【网海拾贝】你们造了如此大的谣，为何没人担责？](../../pages/nsc993/n13710606.md) 
 #### [【网海拾贝】可怕的不是病毒，而是说封就封](../../pages/nsc993/n13709731.md) 
 #### [太魔幻，上海小伙饿疯了，竟主动要吃“牢饭”](../../pages/nsc993/n13709700.md) 
-#### [李春草：醉花阴·政治正确](../../pages/nsc993/n13709048.md) 
-#### [【网海拾贝】所谓不惜一切代价，就是不惜让你成为代价](../../pages/nsc993/n13708201.md) 
-#### [真真：什么是“中国特色”](../../pages/nsc993/n13708141.md) 
-#### [一个上海阳性市民72小时的荒谬人生](../../pages/nsc993/n13706620.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
