have a nice day!

--- a/indexes/nsc1025/183.md
+++ b/indexes/nsc1025/183.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共应为每个谎言承受经济制裁](../../pages/nsc1025/n13717785.md) 
+#### [王赫：“动态清零”背后的内斗](../../pages/nsc1025/n13717683.md) 
+#### [杨威：习近平再低调向白宫喊话](../../pages/nsc1025/n13717195.md) 
+#### [觅真：“四·二五”精神将载入人类历史的史册](../../pages/nsc1025/n13717207.md) 
+#### [谢田：俄乌战争开启人类太空战时代](../../pages/nsc1025/n13717187.md) 
 #### [郝平：上海突公布死亡病例 曝政治权斗五大叙事](../../pages/nsc1025/n13717131.md) 
 #### [【名家专栏】为何台湾是中共的心头大患？](../../pages/nsc1025/n13716917.md) 
 #### [【名家专栏】中国经济存疫情之外更深层麻烦](../../pages/nsc1025/n13716914.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】中共觊觎北极资源](../../pages/nsc1025/n13715368.md) 
 #### [何清涟：全球政治分裂——“三个世界”格局重现](../../pages/nsc1025/n13715415.md) 
 #### [周晓辉：谷哀零下恨不如谷爱凌 梦碗粥时叹非孟晚舟](../../pages/nsc1025/n13715224.md) 
-#### [陈思敏：中共20大前夕辽宁方大入主海航的背后](../../pages/nsc1025/n13715096.md) 
-#### [王赫：中共对南太平洋的三大图谋](../../pages/nsc1025/n13715100.md) 
-#### [钟原：党媒“经济十问”曝光的真实数据（上）](../../pages/nsc1025/n13714806.md) 
-#### [【名家专栏】中共无法战胜病毒 更不要说战争](../../pages/nsc1025/n13714738.md) 
-#### [程晓农：俄罗斯入侵乌克兰的军事启示](../../pages/nsc1025/n13714727.md) 
 
 ---
 #### 第 [ [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) ] 页
