--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [上海死者家属控诉：每个流程里的人都是杀人犯](../../pages/nsc993/n13717729.md) 
+#### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
+#### [知名律师批中共首席专家吴尊友为清零辩护](../../pages/nsc993/n13717705.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13716733.md) 
 #### [吐为快：卜算子·什么是赵国的政治](../../pages/nsc993/n13716683.md) 
 #### [上海财大院长直指当前防疫存在十大问题](../../pages/nsc993/n13716670.md) 
@@ -27,9 +30,6 @@
 #### [媒体人：疫情下的上海，根本不是新闻里看到的那样](../../pages/nsc993/n13711529.md) 
 #### [上海东方卫视防疫晚会被网友骂停](../../pages/nsc993/n13711504.md) 
 #### [上海网友：“刚刚，我妈电话我求救”](../../pages/nsc993/n13710629.md) 
-#### [【网海拾贝】你们造了如此大的谣，为何没人担责？](../../pages/nsc993/n13710606.md) 
-#### [【网海拾贝】可怕的不是病毒，而是说封就封](../../pages/nsc993/n13709731.md) 
-#### [太魔幻，上海小伙饿疯了，竟主动要吃“牢饭”](../../pages/nsc993/n13709700.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
