--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [石采东：忆4.25 和平上访](../../pages/nsc993/n13718144.md) 
 #### [上海死者家属控诉：每个流程里的人都是杀人犯](../../pages/nsc993/n13717729.md) 
 #### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
 #### [知名律师批中共首席专家吴尊友为清零辩护](../../pages/nsc993/n13717705.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】未来十年的灰暗底色已经一览无余](../../pages/nsc993/n13711555.md) 
 #### [媒体人：疫情下的上海，根本不是新闻里看到的那样](../../pages/nsc993/n13711529.md) 
 #### [上海东方卫视防疫晚会被网友骂停](../../pages/nsc993/n13711504.md) 
-#### [上海网友：“刚刚，我妈电话我求救”](../../pages/nsc993/n13710629.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
