--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,12 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共利用疫情把中国彻底变成了警察国家](../../pages/nsc993/n13720045.md) 
+#### [华尔街白领：我如何从拥共到退党并修炼法轮功](../../pages/nsc993/n13719513.md) 
+#### [上海封控区推出“硬隔离”，网民讥讽，律师指违法](../../pages/nsc993/n13720029.md) 
+#### [被骗进方舱的上海老弱病残者](../../pages/nsc993/n13720011.md) 
+#### [乔哲：续写《人民警察的伟光正》](../../pages/nsc993/n13719984.md) 
+#### [李承鹏：上海是预示未来一百年的大河](../../pages/nsc993/n13719506.md) 
+#### [【网海拾贝】中共疾控中心主任为何见了记者抱头鼠窜？](../../pages/nsc993/n13719486.md) 
 #### [石采东：忆4.25 和平上访](../../pages/nsc993/n13718144.md) 
 #### [上海死者家属控诉：每个流程里的人都是杀人犯](../../pages/nsc993/n13717729.md) 
 #### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
@@ -23,13 +30,6 @@
 #### [理悟：十悔逢红朝](../../pages/nsc993/n13713500.md) 
 #### [【网海拾贝】这次上海封城，最值得国人思考是什么？](../../pages/nsc993/n13712983.md) 
 #### [袁斌：他们没有死于新冠，却因新冠而死](../../pages/nsc993/n13712971.md) 
-#### [美国是全球最大人权赤字国？央视被网民骂翻](../../pages/nsc993/n13712475.md) 
-#### [竞选者：什么是国家统一市场？](../../pages/nsc993/n13712470.md) 
-#### [上海市民：我受不了了人很难受，就看着我死吗？](../../pages/nsc993/n13712354.md) 
-#### [【网海拾贝】中国防疫，只有胜利没有结束](../../pages/nsc993/n13712343.md) 
-#### [【网海拾贝】未来十年的灰暗底色已经一览无余](../../pages/nsc993/n13711555.md) 
-#### [媒体人：疫情下的上海，根本不是新闻里看到的那样](../../pages/nsc993/n13711529.md) 
-#### [上海东方卫视防疫晚会被网友骂停](../../pages/nsc993/n13711504.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
