have a nice day!

--- a/indexes/nsc422/5.md
+++ b/indexes/nsc422/5.md
@@ -1,5 +1,8 @@
 ### 纪元评论：纪元社论
 ---
+#### [《真实的江泽民》全书目录](../../pages/nsc422/n13721399.md) 
+#### [《解体党文化》全书目录](../../pages/nsc422/n13721157.md) 
+#### [《共产主义的终极目的》全书目录](../../pages/nsc422/n13721048.md) 
 #### [《九评共产党》全书目录](../../pages/nsc422/n13708085.md) 
 #### [魔鬼在统治着我们的世界(28)：结束语](../../pages/nsc422/n10936246.md) 
 #### [魔鬼在统治着我们的世界(27)：全球野心(下)](../../pages/nsc422/n10928319.md) 
@@ -27,9 +30,6 @@
 #### [魔鬼在统治着我们的世界(7)：渗透西方(上)](../../pages/nsc422/n10426013.md) 
 #### [魔鬼在统治着我们的世界(6)：输出革命](../../pages/nsc422/n10421536.md) 
 #### [魔鬼在统治着我们的世界(5)：东方杀戮](../../pages/nsc422/n10417707.md) 
-#### [魔鬼在统治着我们的世界(4)：欧洲发端](../../pages/nsc422/n10414890.md) 
-#### [魔鬼在统治着我们的世界(3)：毁人36计](../../pages/nsc422/n10411583.md) 
-#### [九评编辑部：魔鬼在统治着我们的世界(2)](../../pages/nsc422/n10410036.md) 
 
 ---
 #### 第 [ [5](./5.md) / [4](./4.md) / [3](./3.md) / [2](./2.md) / [1](./1.md) ] 页
