--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国独步全球的“社会面清零”在演哪出](../../pages/nsc993/n13721688.md) 
+#### [袁斌：这个春天的上海，有多少血和泪](../../pages/nsc993/n13721662.md) 
 #### [【网海拾贝】中共利用疫情把中国彻底变成了警察国家](../../pages/nsc993/n13720045.md) 
 #### [华尔街白领：我如何从拥共到退党并修炼法轮功](../../pages/nsc993/n13719513.md) 
 #### [上海封控区推出“硬隔离”，网民讥讽，律师指违法](../../pages/nsc993/n13720029.md) 
@@ -28,8 +30,6 @@
 #### [金浴凤：哀清零](../../pages/nsc993/n13713507.md) 
 #### [东方霞：观大陆疫情治理有感](../../pages/nsc993/n13713502.md) 
 #### [理悟：十悔逢红朝](../../pages/nsc993/n13713500.md) 
-#### [【网海拾贝】这次上海封城，最值得国人思考是什么？](../../pages/nsc993/n13712983.md) 
-#### [袁斌：他们没有死于新冠，却因新冠而死](../../pages/nsc993/n13712971.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
