--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,10 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】上海官方的新冠死亡人数可靠吗？](../../pages/nsc993/n13722405.md) 
+#### [南岛：爸爸死前问了妈妈三遍──“120什么时候到？”](../../pages/nsc993/n13722393.md) 
+#### [强制市民交钥匙锁宅门  河北迁安防疫无法无天](../../pages/nsc993/n13722388.md) 
+#### [康有然：从乌俄战争谈中共的“血洗台湾，统一中国”](../../pages/nsc993/n13722349.md) 
+#### [林一山：《时代革命》——香港最美丽的时光](../../pages/nsc993/n13717794.md) 
 #### [【网海拾贝】中国独步全球的“社会面清零”在演哪出](../../pages/nsc993/n13721688.md) 
 #### [袁斌：这个春天的上海，有多少血和泪](../../pages/nsc993/n13721662.md) 
 #### [【网海拾贝】中共利用疫情把中国彻底变成了警察国家](../../pages/nsc993/n13720045.md) 
@@ -25,11 +30,6 @@
 #### [上海志愿者：这一次次的折腾究竟是什么道理？](../../pages/nsc993/n13714370.md) 
 #### [跳楼的小提琴家妻子质问：求医无门，为何？](../../pages/nsc993/n13713654.md) 
 #### [【网海拾贝】全世界在解封，中国却越来越像露天监狱](../../pages/nsc993/n13713632.md) 
-#### [一个普通上海高中生的自白和发问](../../pages/nsc993/n13713613.md) 
-#### [观雨堂主：结束吧！“我爱你，中国”](../../pages/nsc993/n13713568.md) 
-#### [金浴凤：哀清零](../../pages/nsc993/n13713507.md) 
-#### [东方霞：观大陆疫情治理有感](../../pages/nsc993/n13713502.md) 
-#### [理悟：十悔逢红朝](../../pages/nsc993/n13713500.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
