--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】三千多条评论，为何一条都不敢亮出来？](../../pages/nsc993/n13723827.md) 
 #### [蔡桂华：人类需要清零中共](../../pages/nsc993/n13723298.md) 
 #### [【网海拾贝】上海官方的新冠死亡人数可靠吗？](../../pages/nsc993/n13722405.md) 
 #### [南岛：爸爸死前问了妈妈三遍──“120什么时候到？”](../../pages/nsc993/n13722393.md) 
@@ -29,7 +30,6 @@
 #### [静雅：疫情再袭中国时 如何才能守住平安？](../../pages/nsc993/n13713292.md) 
 #### [【网海拾贝】上海的国际形象已经分崩离析](../../pages/nsc993/n13714379.md) 
 #### [上海志愿者：这一次次的折腾究竟是什么道理？](../../pages/nsc993/n13714370.md) 
-#### [跳楼的小提琴家妻子质问：求医无门，为何？](../../pages/nsc993/n13713654.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
