have a nice day!

--- a/indexes/nsc1025/186.md
+++ b/indexes/nsc1025/186.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [川人：越南崛起，中共“世界工厂”正被替代？](../../pages/nsc1025/n13725717.md) 
+#### [周晓辉：美国会通过轴心法 北京将自食其果](../../pages/nsc1025/n13725706.md) 
+#### [岳山：天津市长和前副市长猝死之谜](../../pages/nsc1025/n13725501.md) 
 #### [古风：中共无视美国会法案 再助俄罗斯](../../pages/nsc1025/n13725457.md) 
 #### [云松：中俄是否已签订军事结盟密约（下）](../../pages/nsc1025/n13725423.md) 
 #### [【网海拾贝】沪杭开建核酸亭 测核酸将成新常态](../../pages/nsc1025/n13725391.md) 
@@ -27,9 +30,6 @@
 #### [王友群：多维网关门了 《香港01》跳出来了](../../pages/nsc1025/n13722730.md) 
 #### [【纪元专栏】NDP很少胜选 但擅长让政府过度花钱](../../pages/nsc1025/n13722792.md) 
 #### [谢田：推特变天中共有机可乘？](../../pages/nsc1025/n13722766.md) 
-#### [【名家专栏】批判性种族理论是马克思主义流毒](../../pages/nsc1025/n13722517.md) 
-#### [周晓辉：马斯克成功收购推特 需排除中共影响](../../pages/nsc1025/n13722696.md) 
-#### [金言：中共七大保卫战相继沦陷](../../pages/nsc1025/n13722685.md) 
 
 ---
-#### 第 [ [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) / [178](./178.md) ] 页
+#### 第 [ [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) ] 页
