--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [关于上海防疫，一个中国人想问的四个问题](../../pages/nsc993/n13725367.md) 
+#### [郑纯清：“疫”出即“封”是为挡真相](../../pages/nsc993/n13724933.md) 
 #### [【网海拾贝】三千多条评论，为何一条都不敢亮出来？](../../pages/nsc993/n13723827.md) 
 #### [蔡桂华：人类需要清零中共](../../pages/nsc993/n13723298.md) 
 #### [【网海拾贝】上海官方的新冠死亡人数可靠吗？](../../pages/nsc993/n13722405.md) 
@@ -28,8 +30,6 @@
 #### [恐怖，94岁转阴的上海老太太也要被拉去方舱](../../pages/nsc993/n13715170.md) 
 #### [侯镇安：香港政府滥用国安法余波未了](../../pages/nsc993/n13715143.md) 
 #### [静雅：疫情再袭中国时 如何才能守住平安？](../../pages/nsc993/n13713292.md) 
-#### [【网海拾贝】上海的国际形象已经分崩离析](../../pages/nsc993/n13714379.md) 
-#### [上海志愿者：这一次次的折腾究竟是什么道理？](../../pages/nsc993/n13714370.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
