--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [楚一丁：五四的困惑](../../pages/nsc1028/n13725250.md) 
 #### [王友群：毛泽东发动的“挖祖坟”运动](../../pages/nsc1028/n13723639.md) 
 #### [王友群：韩正与上海“小红楼”、孙力军及其他](../../pages/nsc1028/n13719454.md) 
 #### [张青：从编造“细菌战”到隐瞒新冠病毒源头](../../pages/nsc1028/n13713424.md) 
@@ -29,7 +30,6 @@
 #### [张菁：红色特工李时雨的风雨人生](../../pages/nsc1028/n13609187.md) 
 #### [被遗忘的礼仪艺术：蕴含神性智慧的正确行为](../../pages/nsc1028/n13607119.md) 
 #### [王友群：中共政治体制改革被终结之谜](../../pages/nsc1028/n13606004.md) 
-#### [张海霞：唐代的宗教自由到共产党的宗教迫害](../../pages/nsc1028/n13604693.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
