--- a/indexes/nsc993/79.md
+++ b/indexes/nsc993/79.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】长沙房屋倒塌跟建筑质量无关，你信吗？](../../pages/nsc993/n13726099.md) 
+#### [大陆作家：信任崩解，是上海疫情最大的后遗症](../../pages/nsc993/n13726083.md) 
+#### [“太荒唐了，这个是二十一世纪的上海啊”](../../pages/nsc993/n13725520.md) 
 #### [关于上海防疫，一个中国人想问的四个问题](../../pages/nsc993/n13725367.md) 
 #### [郑纯清：“疫”出即“封”是为挡真相](../../pages/nsc993/n13724933.md) 
 #### [【网海拾贝】三千多条评论，为何一条都不敢亮出来？](../../pages/nsc993/n13723827.md) 
@@ -27,9 +30,6 @@
 #### [上海财大院长直指当前防疫存在十大问题](../../pages/nsc993/n13716670.md) 
 #### [【网海拾贝】病毒没清零，最基本的人权却被清零了](../../pages/nsc993/n13716295.md) 
 #### [【网海拾贝】孙春兰在上海视察搞屋顶摆拍，穿帮了](../../pages/nsc993/n13715212.md) 
-#### [恐怖，94岁转阴的上海老太太也要被拉去方舱](../../pages/nsc993/n13715170.md) 
-#### [侯镇安：香港政府滥用国安法余波未了](../../pages/nsc993/n13715143.md) 
-#### [静雅：疫情再袭中国时 如何才能守住平安？](../../pages/nsc993/n13713292.md) 
 
 ---
 #### 第 [ [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) ] 页
