--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十六：“现行反革命”张志新](../../pages/nsc1028/n13726926.md) 
+#### [林辉：鲁迅自言弃医从文原因有假](../../pages/nsc1028/n13727240.md) 
 #### [楚一丁：五四的困惑](../../pages/nsc1028/n13725250.md) 
 #### [王友群：毛泽东发动的“挖祖坟”运动](../../pages/nsc1028/n13723639.md) 
 #### [王友群：韩正与上海“小红楼”、孙力军及其他](../../pages/nsc1028/n13719454.md) 
@@ -28,8 +30,6 @@
 #### [中共是怎么为自己涂脂抹粉的（10）](../../pages/nsc1028/n13615970.md) 
 #### [李天韵：国际共产党地下队伍](../../pages/nsc1028/n13611808.md) 
 #### [张菁：红色特工李时雨的风雨人生](../../pages/nsc1028/n13609187.md) 
-#### [被遗忘的礼仪艺术：蕴含神性智慧的正确行为](../../pages/nsc1028/n13607119.md) 
-#### [王友群：中共政治体制改革被终结之谜](../../pages/nsc1028/n13606004.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
