--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：江泽民中意的接班人陈良宇倒台之回顾](../../pages/nsc1028/n13727137.md) 
 #### [中共罪行录之七十六：“现行反革命”张志新](../../pages/nsc1028/n13726926.md) 
 #### [林辉：鲁迅自言弃医从文原因有假](../../pages/nsc1028/n13727240.md) 
 #### [楚一丁：五四的困惑](../../pages/nsc1028/n13725250.md) 
@@ -29,7 +30,6 @@
 #### [我们从小到大学到的历史哪些是假的（12）](../../pages/nsc1028/n13619491.md) 
 #### [中共是怎么为自己涂脂抹粉的（10）](../../pages/nsc1028/n13615970.md) 
 #### [李天韵：国际共产党地下队伍](../../pages/nsc1028/n13611808.md) 
-#### [张菁：红色特工李时雨的风雨人生](../../pages/nsc1028/n13609187.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
