--- a/indexes/nsc1025/186.md
+++ b/indexes/nsc1025/186.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：政治局常委会议忽提“斗争”有蹊跷](../../pages/nsc1025/n13728275.md) 
+#### [袁斌：中共对自发因素的恐惧与防疫“新常态”](../../pages/nsc1025/n13728627.md) 
+#### [周晓辉：中共政治局委员们打疫苗做核酸了吗？](../../pages/nsc1025/n13728567.md) 
+#### [【名家专栏】如何像亿万富翁一样投资 应对通胀](../../pages/nsc1025/n13727916.md) 
+#### [王友群：中共对法轮功的“清零行动”注定失败](../../pages/nsc1025/n13727525.md) 
+#### [谢田：中共密商应对美国制裁为何一筹莫展？](../../pages/nsc1025/n13728088.md) 
 #### [【纪元专栏】教师本职是传道授业 不是散播激进政治观点](../../pages/nsc1025/n13728085.md) 
 #### [夏林:电动车还是汽油车？](../../pages/nsc1025/n13728044.md) 
 #### [岳山：中共二十大前习近平打散地方势力？](../../pages/nsc1025/n13727702.md) 
@@ -24,12 +30,6 @@
 #### [岳山：天津市长和前副市长猝死之谜](../../pages/nsc1025/n13725501.md) 
 #### [古风：中共无视美国会法案 再助俄罗斯](../../pages/nsc1025/n13725457.md) 
 #### [云松：中俄是否已签订军事结盟密约（下）](../../pages/nsc1025/n13725423.md) 
-#### [【网海拾贝】沪杭开建核酸亭 测核酸将成新常态](../../pages/nsc1025/n13725391.md) 
-#### [白云天：加入中共组织光荣？事实颠覆她的认知](../../pages/nsc1025/n13725345.md) 
-#### [楚一丁：看俄乌战争和世界重新两极化](../../pages/nsc1025/n13725129.md) 
-#### [川人：动态清零，中国人只是“成本和代价”？](../../pages/nsc1025/n13724943.md) 
-#### [颜丹：“大翻译运动”为何令中共胆寒？](../../pages/nsc1025/n13724952.md) 
-#### [杨宁:  竹子开花现产粮大省 饥荒要发生？](../../pages/nsc1025/n13724957.md) 
 
 ---
 #### 第 [ [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) ] 页
