--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】现在有三个迥然不同的上海](../../pages/nsc993/n13728664.md) 
+#### [南岛：代价](../../pages/nsc993/n13728623.md) 
 #### [【网海拾贝】中共跟外界完全是两套系统，没有共通处](../../pages/nsc993/n13726952.md) 
 #### [南岛：这是人间地狱](../../pages/nsc993/n13726950.md) 
 #### [【网海拾贝】长沙房屋倒塌跟建筑质量无关，你信吗？](../../pages/nsc993/n13726099.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
 #### [知名律师批中共首席专家吴尊友为清零辩护](../../pages/nsc993/n13717705.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13716733.md) 
-#### [吐为快：卜算子·什么是赵国的政治](../../pages/nsc993/n13716683.md) 
-#### [上海财大院长直指当前防疫存在十大问题](../../pages/nsc993/n13716670.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
