have a nice day!

--- a/indexes/nsc1025/187.md
+++ b/indexes/nsc1025/187.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [李明：疫情不能“清零” 中共为何要死守“清零”](../../pages/nsc1025/n13729461.md) 
+#### [周晓辉：面对挑战反抗 中南海高层日子难捱](../../pages/nsc1025/n13728919.md) 
 #### [王赫：中共的“抗制裁能力”强过俄罗斯吗？](../../pages/nsc1025/n13729012.md) 
 #### [【名家专栏】美国滞胀已经到来](../../pages/nsc1025/n13728602.md) 
 #### [钟原：政治局常委会议忽提“斗争”有蹊跷](../../pages/nsc1025/n13728275.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】保卫美国西部边界 防中共势力侵蚀](../../pages/nsc1025/n13725525.md) 
 #### [【名家专栏】美国第一季度GDP说明什么？](../../pages/nsc1025/n13725561.md) 
 #### [川人：越南崛起，中共“世界工厂”正被替代？](../../pages/nsc1025/n13725717.md) 
-#### [周晓辉：美国会通过轴心法 北京将自食其果](../../pages/nsc1025/n13725706.md) 
-#### [岳山：天津市长和前副市长猝死之谜](../../pages/nsc1025/n13725501.md) 
 
 ---
-#### 第 [ [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) / [179](./179.md) ] 页
+#### 第 [ [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) ] 页
