--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [觅真：母亲节的哀思](../../pages/nsc1035/n13729452.md) 
+#### [吴玉：守护内心的善良之光，那是夜空最亮的星星](../../pages/nsc1035/n13729214.md) 
 #### [梁蕊：《神韵作品：后台奇遇》唤醒尘封的记忆](../../pages/nsc1035/n13727363.md) 
 #### [万淑同：请别忽视电影的力量  观《抓捕3》有感](../../pages/nsc1035/n13723311.md) 
 #### [观雨堂主：写信](../../pages/nsc1035/n13722788.md) 
@@ -28,8 +30,6 @@
 #### [薄岚澄：一波三折却震撼人心的新年聚会](../../pages/nsc1035/n13506511.md) 
 #### [李清：北京胡同里一家法国人的故事](../../pages/nsc1035/n13502266.md) 
 #### [金言：虎年说虎——忧伤的生肖邮票](../../pages/nsc1035/n13500542.md) 
-#### [卷云：一场心灵的洗涤](../../pages/nsc1035/n13499041.md) 
-#### [李清：“方脑袋”的德国人](../../pages/nsc1035/n13486826.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
