--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [祝君安：浣溪沙‧境外势力](../../pages/nsc993/n13729451.md) 
 #### [【网海拾贝】现在有三个迥然不同的上海](../../pages/nsc993/n13728664.md) 
 #### [南岛：代价](../../pages/nsc993/n13728623.md) 
 #### [【网海拾贝】中共跟外界完全是两套系统，没有共通处](../../pages/nsc993/n13726952.md) 
@@ -29,7 +30,6 @@
 #### [上海死者家属控诉：每个流程里的人都是杀人犯](../../pages/nsc993/n13717729.md) 
 #### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
 #### [知名律师批中共首席专家吴尊友为清零辩护](../../pages/nsc993/n13717705.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13716733.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
