--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [上海法学教授：“一人阳性、全楼转运” 违法](../../pages/nsc993/n13731029.md) 
+#### [安德森：饥饿塔](../../pages/nsc993/n13731189.md) 
+#### [黄之鸣：上海疫情自述](../../pages/nsc993/n13731186.md) 
 #### [【网海拾贝】70000家外企正重估在上海的明天](../../pages/nsc993/n13730549.md) 
 #### [祝君安：浣溪沙‧境外势力](../../pages/nsc993/n13729451.md) 
 #### [【网海拾贝】现在有三个迥然不同的上海](../../pages/nsc993/n13728664.md) 
@@ -27,9 +30,6 @@
 #### [乔哲：续写《人民警察的伟光正》](../../pages/nsc993/n13719984.md) 
 #### [李承鹏：上海是预示未来一百年的大河](../../pages/nsc993/n13719506.md) 
 #### [【网海拾贝】中共疾控中心主任为何见了记者抱头鼠窜？](../../pages/nsc993/n13719486.md) 
-#### [石采东：忆4.25 和平上访](../../pages/nsc993/n13718144.md) 
-#### [上海死者家属控诉：每个流程里的人都是杀人犯](../../pages/nsc993/n13717729.md) 
-#### [【网海拾贝】改革开放的橱窗如今成了暴政的橱窗](../../pages/nsc993/n13717722.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
