--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [林辉：不愿许广平工作 鲁迅协助救中共党员](../../pages/nsc1028/n13732075.md) 
 #### [王友群：“中华人民共和国”就是一个谎言](../../pages/nsc1028/n13729052.md) 
 #### [惠虎宇：俄乌恩怨 千年探源](../../pages/nsc1028/n13727306.md) 
 #### [林辉：鲁迅签名卖国条约 谩骂杨荫榆是何因](../../pages/nsc1028/n13728824.md) 
@@ -29,7 +30,6 @@
 #### [张菁：批《武训传》 有江青与陶行知的个人恩怨](../../pages/nsc1028/n13629055.md) 
 #### [王友群：中共两次免于苏共核打击之谜](../../pages/nsc1028/n13624529.md) 
 #### [林辉： 中共优待洗脑日俘 内战中日军贡献大](../../pages/nsc1028/n13624644.md) 
-#### [我们从小到大学到的历史哪些是假的（13）](../../pages/nsc1028/n13623863.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
