--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】千金万金比不得安睡一晚](../../pages/nsc993/n13731924.md) 
 #### [上海法学教授：“一人阳性、全楼转运” 违法](../../pages/nsc993/n13731029.md) 
 #### [安德森：饥饿塔](../../pages/nsc993/n13731189.md) 
 #### [黄之鸣：上海疫情自述](../../pages/nsc993/n13731186.md) 
@@ -29,7 +30,6 @@
 #### [被骗进方舱的上海老弱病残者](../../pages/nsc993/n13720011.md) 
 #### [乔哲：续写《人民警察的伟光正》](../../pages/nsc993/n13719984.md) 
 #### [李承鹏：上海是预示未来一百年的大河](../../pages/nsc993/n13719506.md) 
-#### [【网海拾贝】中共疾控中心主任为何见了记者抱头鼠窜？](../../pages/nsc993/n13719486.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
