have a nice day!

--- a/indexes/nsc1025/187.md
+++ b/indexes/nsc1025/187.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [郝平：禅让制与党体不符 习连任不顺但未受重创](../../pages/nsc1025/n13733608.md) 
+#### [岳山：共青团大会五个不寻常 涉中南海权斗？](../../pages/nsc1025/n13733249.md) 
+#### [周晓辉：世卫谭德塞为何否定清零政策？](../../pages/nsc1025/n13733078.md) 
+#### [杨威：习近平与马克龙通话现“戏剧性”](../../pages/nsc1025/n13732746.md) 
+#### [王赫：是否维持对华加征关税 拜登政府该有决断](../../pages/nsc1025/n13732441.md) 
+#### [王友群：为什么江泽民战胜不了法轮功？](../../pages/nsc1025/n13732367.md) 
+#### [【名家专栏】美国将面临经济衰退吗？](../../pages/nsc1025/n13732121.md) 
+#### [金言：舟山血色夜空预示着社会动荡？](../../pages/nsc1025/n13732420.md) 
+#### [拜登经济学VS习近平“战疫”经济学 世界傻眼](../../pages/nsc1025/n13732384.md) 
 #### [【名家专栏】政府过度监管使美国药物价格高](../../pages/nsc1025/n13731332.md) 
 #### [杨威：习近平急连线德总理 对俄乌战争变调](../../pages/nsc1025/n13731742.md) 
 #### [王赫：尹锡悦上任 中共能拉拢韩国吗？](../../pages/nsc1025/n13731625.md) 
@@ -21,15 +30,6 @@
 #### [【名家专栏】美国滞胀已经到来](../../pages/nsc1025/n13728602.md) 
 #### [钟原：政治局常委会议忽提“斗争”有蹊跷](../../pages/nsc1025/n13728275.md) 
 #### [袁斌：中共对自发因素的恐惧与防疫“新常态”](../../pages/nsc1025/n13728627.md) 
-#### [周晓辉：中共政治局委员们打疫苗做核酸了吗？](../../pages/nsc1025/n13728567.md) 
-#### [【名家专栏】如何像亿万富翁一样投资 应对通胀](../../pages/nsc1025/n13727916.md) 
-#### [王友群：中共对法轮功的“清零行动”注定失败](../../pages/nsc1025/n13727525.md) 
-#### [谢田：中共密商应对美国制裁为何一筹莫展？](../../pages/nsc1025/n13728088.md) 
-#### [【纪元专栏】教师本职是传道授业 不是散播激进政治观点](../../pages/nsc1025/n13728085.md) 
-#### [夏林:电动车还是汽油车？](../../pages/nsc1025/n13728044.md) 
-#### [岳山：中共二十大前习近平打散地方势力？](../../pages/nsc1025/n13727702.md) 
-#### [【有冇搞错】中共必封杀Web3.0](../../pages/nsc1025/n13727399.md) 
-#### [郝平：中共为何不发钱给百姓救急救经济？](../../pages/nsc1025/n13727708.md) 
 
 ---
 #### 第 [ [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) ] 页
