have a nice day!

--- a/indexes/nsc1025/187.md
+++ b/indexes/nsc1025/187.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：美国的台海双轨政策走向尽头？](../../pages/nsc1025/n13733983.md) 
+#### [王友群：我入狱、出狱、出国的若干回忆](../../pages/nsc1025/n13733957.md) 
+#### [【名家专栏】中俄将给世界带来前所未有危机](../../pages/nsc1025/n13733146.md) 
 #### [郝平：禅让制与党体不符 习连任不顺但未受重创](../../pages/nsc1025/n13733608.md) 
 #### [岳山：共青团大会五个不寻常 涉中南海权斗？](../../pages/nsc1025/n13733249.md) 
 #### [周晓辉：世卫谭德塞为何否定清零政策？](../../pages/nsc1025/n13733078.md) 
@@ -27,9 +30,6 @@
 #### [李明：疫情不能“清零” 中共为何要死守“清零”](../../pages/nsc1025/n13729461.md) 
 #### [周晓辉：面对挑战反抗 中南海高层日子难捱](../../pages/nsc1025/n13728919.md) 
 #### [王赫：中共的“抗制裁能力”强过俄罗斯吗？](../../pages/nsc1025/n13729012.md) 
-#### [【名家专栏】美国滞胀已经到来](../../pages/nsc1025/n13728602.md) 
-#### [钟原：政治局常委会议忽提“斗争”有蹊跷](../../pages/nsc1025/n13728275.md) 
-#### [袁斌：中共对自发因素的恐惧与防疫“新常态”](../../pages/nsc1025/n13728627.md) 
 
 ---
 #### 第 [ [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) ] 页
