--- a/indexes/nsc1025/188.md
+++ b/indexes/nsc1025/188.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [袁斌：中共为何掩盖删除长沙倒塌事故遇难者的名字？](../../pages/nsc1025/n13735204.md) 
+#### [【名家专栏】通货膨胀 美国人面对的艰难旅程](../../pages/nsc1025/n13734990.md) 
+#### [【名家专栏】制裁中共应从现在开始](../../pages/nsc1025/n13733855.md) 
 #### [【纪元专栏】政府电动车补助 实质是劫贫济富](../../pages/nsc1025/n13734761.md) 
 #### [王赫：美国的台海双轨政策走向尽头？](../../pages/nsc1025/n13733983.md) 
 #### [王友群：我入狱、出狱、出国的若干回忆](../../pages/nsc1025/n13733957.md) 
@@ -27,9 +30,6 @@
 #### [沈舟：俄乌战事胶着 最后谁能赢？](../../pages/nsc1025/n13729909.md) 
 #### [【名家专栏】四个邪恶政权的核武威胁](../../pages/nsc1025/n13729936.md) 
 #### [【名家专栏】马斯克收购推特对权力集团意味啥](../../pages/nsc1025/n13729521.md) 
-#### [周晓辉：党政军纪委齐表态 李克强再与习不同调](../../pages/nsc1025/n13729714.md) 
-#### [李明：疫情不能“清零” 中共为何要死守“清零”](../../pages/nsc1025/n13729461.md) 
-#### [周晓辉：面对挑战反抗 中南海高层日子难捱](../../pages/nsc1025/n13728919.md) 
 
 ---
-#### 第 [ [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) / [180](./180.md) ] 页
+#### 第 [ [188](./188.md) / [187](./187.md) / [186](./186.md) / [185](./185.md) / [184](./184.md) / [183](./183.md) / [182](./182.md) / [181](./181.md) ] 页
