--- a/indexes/nsc993/80.md
+++ b/indexes/nsc993/80.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】上海不再是文化高地，而是政治据点](../../pages/nsc993/n13735354.md) 
+#### [林清泉：在逃出魔掌的日子里](../../pages/nsc993/n13733918.md) 
+#### [南岛：魔都流浪记](../../pages/nsc993/n13735342.md) 
+#### [网友讥讽中共封杀谭德塞讲话是“笑料”](../../pages/nsc993/n13735319.md) 
 #### [【网海拾贝】千金万金比不得安睡一晚](../../pages/nsc993/n13731924.md) 
 #### [上海法学教授：“一人阳性、全楼转运” 违法](../../pages/nsc993/n13731029.md) 
 #### [安德森：饥饿塔](../../pages/nsc993/n13731189.md) 
@@ -26,10 +30,6 @@
 #### [袁斌：这个春天的上海，有多少血和泪](../../pages/nsc993/n13721662.md) 
 #### [【网海拾贝】中共利用疫情把中国彻底变成了警察国家](../../pages/nsc993/n13720045.md) 
 #### [华尔街白领：我如何从拥共到退党并修炼法轮功](../../pages/nsc993/n13719513.md) 
-#### [上海封控区推出“硬隔离”，网民讥讽，律师指违法](../../pages/nsc993/n13720029.md) 
-#### [被骗进方舱的上海老弱病残者](../../pages/nsc993/n13720011.md) 
-#### [乔哲：续写《人民警察的伟光正》](../../pages/nsc993/n13719984.md) 
-#### [李承鹏：上海是预示未来一百年的大河](../../pages/nsc993/n13719506.md) 
 
 ---
 #### 第 [ [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) ] 页
